Cambio de ubicación de imágenes

--- a/src/components/hero-image.astro
+++ b/src/components/hero-image.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import groupImage from "~/assets/group2.jpg";
+import groupImage from "../../public/group2.jpg";
 
 const widths = [450, 800, 1200];
 const sizes = "100vw";
