--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -17,7 +17,7 @@ const navItems: Array<NavItem> = [
   class="absolute bottom-0 z-20 flex w-full items-center justify-between border-b border-transparent px-8 py-4 text-white"
 >
   <a class="flex items-center gap-3 hover:!text-default" href="#">
-    <img src="src/assets/main-logo.png" class="size-10" alt="Main KAHP Logo">
+    <img src="/main-logo.png" class="size-10" alt="Main KAHP Logo">
   </a>
   <div>
     <div class="flex items-center gap-6">
@@ -58,7 +58,7 @@ const navItems: Array<NavItem> = [
             </button>
           </header>
           <div class="flex justify-center">
-            <img src="src/assets/main-logo.png" class="size-16" alt="Main KAHP Logo">
+            <img src="/main-logo.png" class="size-16" alt="Main KAHP Logo">
           </div>
           <nav>
             <ul class="flex flex-col">
