Se agrega inline de prueba

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -44,7 +44,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
   </style>
 </noscript>
 
-<style>
+<style is:inline>
   @keyframes float {
     0% {
       transform: translate3d(0, 0, 0);
@@ -83,4 +83,4 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
   }
 </style>
 
-<script src="../../public/js/polygon-animation.js" defer></script>
+<script src="../../public/js/polygon-animation.js" is:inline defer></script>
